tests/snapshots/run_wpt_conformance__onnx_cast_float16_4D_tensor_to_int64.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cast.https.any.js",
    "cast float16 4D tensor to int64",
    "onnx",
    "PASS",
)
